--- a/admin.html
+++ b/admin.html
@@ -2,291 +2,141 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Diccionario - AR</title>
+  <title>Panel Admin - Diccionario AR</title>
   <style>
-    @font-face {
-      font-family: 'MiddleOfApril';
-      src: url('Middle-of-April.ttf') format('truetype');
-    }
-
     body {
-      margin: 0;
-      padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #0f0f0f, #1a1a1a);
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background-color: #111;
+      color: #f1f1f1;
+      margin: 0;
+      padding: 20px;
     }
-
-    .ventana {
-      background-color: #181818;
-      border-radius: 30px;
-      padding: 40px;
-      width: 90%;
-      max-width: 700px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
-      text-align: center;
-      position: relative;
-    }
-
-    .burbujas {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-    }
-
-    .burbujas span {
-      display: inline-block;
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      margin-left: 6px;
-    }
-
-    .naranja { background-color: #ff6a00; }
-    .rojo { color: #ff5c39; }
-    .azul { color: #1877f2; }
 
     h1 {
-      font-family: 'MiddleOfApril', cursive;
-      font-size: 3.5rem;
-      margin: 0;
-      line-height: 1.2;
-      margin-bottom: 40px;
+      color: #3ae374;
+      text-align: center;
     }
 
-    input, button, select, textarea {
+    .login {
+      max-width: 300px;
+      margin: 0 auto;
+    }
+
+    input, button {
       width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      font-size: 16px;
+      padding: 10px;
+      margin: 10px 0;
+      font-size: 1rem;
       border: none;
-      border-radius: 8px;
-      box-sizing: border-box;
+      border-radius: 6px;
     }
 
-    input, select, textarea {
-      background: #2a2a2a;
+    input {
+      background: #222;
       color: white;
     }
 
     button {
-      background-color: #007acc;
+      background-color: #3a82f7;
       color: white;
-      font-weight: bold;
       cursor: pointer;
-      transition: background 0.3s;
     }
 
-    button:hover {
-      background-color: #005f99;
-    }
-
-    #resultado {
-      margin-top: 20px;
-      background-color: #292929;
-      padding: 20px;
-      border-radius: 10px;
-      color: #eee;
-      text-align: left;
-      white-space: pre-line;
-    }
-
-    .titulo-resultado {
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin-bottom: 8px;
-      color: #3ae374;
-    }
-
-    .sinonimos span {
-      background-color: #333;
-      padding: 4px 8px;
-      margin: 2px;
-      border-radius: 6px;
-      display: inline-block;
-    }
-
-    .top-buttons {
-      position: fixed;
-      top: 10px;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      padding: 0 20px;
-      box-sizing: border-box;
-    }
-
-    .formulario-popup {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #202020;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 500px;
-      width: 90%;
-      z-index: 999;
+    .admin-panel {
       display: none;
+      max-width: 1000px;
+      margin: 20px auto;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+
+    th, td {
+      padding: 10px;
+      border: 1px solid #555;
+      text-align: left;
+    }
+
+    .acciones button {
+      margin-right: 10px;
+      padding: 5px 10px;
     }
   </style>
 </head>
 <body>
-  <div class="top-buttons">
-    <button onclick="abrirFormulario()">Agregar Término</button>
-    <button onclick="window.location.href='admin.html'">Admin</button>
+  <h1>Panel de Administración</h1>
+
+  <div class="login" id="login-box">
+    <input type="text" id="usuario" placeholder="Usuario">
+    <input type="password" id="clave" placeholder="Contraseña">
+    <button onclick="login()">Ingresar</button>
+    <p id="mensaje" style="color: red;"></p>
   </div>
 
-  <div class="ventana">
-    <div class="burbujas">
-      <span class="naranja"></span>
-      <span class="naranja" style="opacity: 0.7;"></span>
-      <span class="naranja" style="opacity: 0.4;"></span>
-    </div>
-
-    <h1>
-      <span class="azul">Diccionario</span><span class="rojo"> - AR</span>
-    </h1>
-
-    <input type="text" id="termino" placeholder="Escribe una palabra o abreviatura..." onkeydown="if(event.key==='Enter'){buscar()}">
-    <button onclick="buscar()">Buscar</button>
-
-    <div id="resultado">Resultado aquí...</div>
-  </div>
-
-  <div class="formulario-popup" id="popup-formulario">
-    <h2>Agregar nuevo término</h2>
-    <select id="tipo">
-      <option value="abreviatura">Abreviatura</option>
-      <option value="termino">Término completo</option>
-      <option value="forma">Forma farmacéutica</option>
-    </select>
-    <input type="text" id="nombre" placeholder="Nombre del término">
-    <input type="text" id="traduccion" placeholder="Traducción">
-    <input type="text" id="pronunciacion" placeholder="Pronunciación">
-    <input type="text" id="categoria" placeholder="Categoría gramatical">
-    <input type="text" id="tipoForma" placeholder="Tipo de forma farmacéutica">
-    <textarea id="definicion" placeholder="Definición"></textarea>
-    <input type="text" id="sinonimos" placeholder="Sinónimos (separados por coma)">
-    <button onclick="guardarTermino()">Guardar</button>
-    <button onclick="cerrarFormulario()">Cerrar</button>
+  <div class="admin-panel" id="admin-panel">
+    <h2>Términos propuestos</h2>
+    <table id="tabla">
+      <thead>
+        <tr>
+          <th>Fecha</th>
+          <th>Nombre</th>
+          <th>Traducción</th>
+          <th>Pronunciación</th>
+          <th>Categoría</th>
+          <th>Definición</th>
+          <th>Sinónimos</th>
+          <th>Tipo (forma)</th>
+        </tr>
+      </thead>
+      <tbody id="cuerpo-tabla"></tbody>
+    </table>
   </div>
 
   <script>
-    let glosario = {};
+    const userValido = "admin";
+    const passValida = "glosario123";
 
-    fetch("glosario.json")
-      .then(res => res.json())
-      .then(data => glosario = data)
-      .catch(err => {
-        document.getElementById("resultado").innerText = "Error al cargar glosario.json";
-        console.error(err);
-      });
+    function login() {
+      const usuario = document.getElementById("usuario").value.trim();
+      const clave = document.getElementById("clave").value.trim();
+      const mensaje = document.getElementById("mensaje");
 
-    function normalizarTexto(texto) {
-      return texto.normalize("NFD").replace(/[̀-ͯ]/g, "").toUpperCase();
+      if (usuario === userValido && clave === passValida) {
+        document.getElementById("login-box").style.display = "none";
+        document.getElementById("admin-panel").style.display = "block";
+        cargarDatosDesdeGoogleSheets();
+      } else {
+        mensaje.textContent = "Usuario o contraseña incorrectos.";
+      }
     }
 
-    function buscar() {
-      const input = normalizarTexto(document.getElementById("termino").value.trim());
-      const resultado = document.getElementById("resultado");
-      resultado.innerHTML = "";
+    function cargarDatosDesdeGoogleSheets() {
+      const sheetURL = "https://docs.google.com/spreadsheets/d/144znR6HxwyxtTdd3-Luuqk1ClIC5UuDLZG5_gWVNiKc/gviz/tq?tqx=out:json";
 
-      let claveEncontrada = null;
+      fetch(sheetURL)
+        .then(res => res.text())
+        .then(text => {
+          const json = JSON.parse(text.substr(47).slice(0, -2));
+          const rows = json.table.rows;
+          const cuerpo = document.getElementById("cuerpo-tabla");
+          cuerpo.innerHTML = "";
 
-      for (let clave in glosario) {
-        if (normalizarTexto(clave) === input) {
-          claveEncontrada = clave;
-          break;
-        }
-      }
-
-      if (!claveEncontrada) {
-        resultado.innerText = "Término no encontrado.";
-        return;
-      }
-
-      const datos = glosario[claveEncontrada];
-
-      if (datos.categoria && datos.categoria.toLowerCase() === "abreviatura") {
-        resultado.innerHTML = `
-          <div class="titulo-resultado">${claveEncontrada}</div>
-          <strong>Definición:</strong><br>${datos.definicion}
-        `;
-        return;
-      }
-
-      resultado.innerHTML = `
-        <div class="titulo-resultado">${claveEncontrada}</div>
-        <strong>Traducción:</strong> ${datos.traduccion}<br>
-        <strong>Pronunciación:</strong> ${datos.pronunciacion ? `/${datos.pronunciacion}/` : "-"}<br>
-        <strong>Categoría:</strong> ${datos.categoria}<br>
-        <strong>Definición:</strong><br>${datos.definicion}<br>
-        <strong>Sinónimos:</strong><br>
-        <div class="sinonimos">
-          ${datos.sinonimos.map(s => `<span>${s}</span>`).join(" ")}
-        </div>
-      `;
-    }
-
-    function abrirFormulario() {
-      document.getElementById("popup-formulario").style.display = "block";
-      document.getElementById("tipoForma").style.display = "none";
-      document.getElementById("traduccion").style.display = "block";
-      document.getElementById("pronunciacion").style.display = "block";
-      document.getElementById("categoria").style.display = "block";
-      document.getElementById("sinonimos").style.display = "block";
-
-      document.getElementById("tipo").addEventListener("change", function () {
-        const tipo = this.value;
-        document.getElementById("traduccion").style.display = tipo === "abreviatura" ? "none" : "block";
-        document.getElementById("pronunciacion").style.display = tipo === "abreviatura" ? "none" : "block";
-        document.getElementById("categoria").style.display = tipo === "abreviatura" ? "none" : "block";
-        document.getElementById("sinonimos").style.display = tipo === "abreviatura" ? "none" : "block";
-        document.getElementById("tipoForma").style.display = tipo === "forma" ? "block" : "none";
-      });
-    }
-
-    function cerrarFormulario() {
-      document.getElementById("popup-formulario").style.display = "none";
-    }
-
-    function guardarTermino() {
-      const tipo = document.getElementById("tipo").value;
-      const nombre = document.getElementById("nombre").value.trim().toUpperCase();
-      const definicion = document.getElementById("definicion").value.trim();
-      const traduccion = document.getElementById("traduccion").value.trim();
-      const pronunciacion = document.getElementById("pronunciacion").value.trim();
-      const categoria = document.getElementById("categoria").value.trim();
-      const sinonimos = document.getElementById("sinonimos").value.split(",").map(s => s.trim()).filter(s => s);
-      const tipoForma = document.getElementById("tipoForma").value.trim();
-
-      if (!nombre || !definicion) {
-        alert("Por favor completa al menos el nombre y la definición.");
-        return;
-      }
-
-      let entrada = {
-        definicion: definicion,
-        traduccion: tipo === "abreviatura" ? "" : traduccion,
-        pronunciacion: tipo === "abreviatura" ? "" : pronunciacion,
-        categoria: tipo === "forma" ? "Forma farmacéutica" : tipo === "abreviatura" ? "Abreviatura" : categoria,
-        sinonimos: tipo === "abreviatura" ? [] : sinonimos
-      };
-
-      if (tipo === "forma") {
-        entrada.tipo = tipoForma;
-      }
-
-      let propuestos = JSON.parse(localStorage.getItem("propuestos")) || [];
-      propuestos.push({ nombre, datos: entrada });
-      localStorage.setItem("propuestos", JSON.stringify(propuestos));
-
-      alert("Término guardado para revisión del administrador.");
-      cerrarFormulario();
+          rows.slice(1).forEach(row => {
+            const tr = document.createElement("tr");
+            row.c.forEach(cell => {
+              const td = document.createElement("td");
+              td.textContent = cell ? cell.v : "";
+              tr.appendChild(td);
+            });
+            cuerpo.appendChild(tr);
+          });
+        })
+        .catch(error => {
+          console.error("Error al cargar datos de Google Sheets", error);
+        });
     }
   </script>
 </body>
